# snowscape

./: ARCHITECTURE.md  Cargo.toml  LICENSE  PREVIEW_SELECTOR.md  README.md
examples/counter/: Cargo.toml
examples/counter/src/: lib.rs  main.rs  preview.rs
examples/counter/tests/: automation.rs  counter.ice
examples/counter/tests/counter/: basic-increment.ice  increment-and-decrement.ice  increment_with_id.ice  multiple-increments.ice
examples/custom_theme/: Cargo.toml
examples/custom_theme/src/: main.rs  theme.rs
examples/demo/: Cargo.toml
examples/demo/src/: lib.rs  main.rs  preview.rs
examples/dynamic_params/: Cargo.toml
examples/dynamic_params/src/: lib.rs  main.rs
examples/preview/: Cargo.toml  main.rs
examples/self/: Cargo.toml
examples/self/src/: lib.rs  main.rs
examples/self/tests/: automation.rs
examples/self/tests/app/: search-test-pane.ice
examples/self/tests/dialog/: close-via-button.ice  close-via-underlay.ice  open-dialog.ice
examples/self/tests/dialog-without-animation/: close-via-button.ice  close-via-underlay.ice  open-dialog.ice
snowscape-macros/: Cargo.toml
snowscape-macros/src/: lib.rs
src/: app.rs  config_tab.rs  icon.rs  lib.rs  main.rs  message.rs  metadata.rs  preview.rs  screenshot.rs  style.rs  test.rs  widget.rs
src/preview/: descriptor.rs  dynamic.rs  history.rs  performance.rs  stateful.rs  stateless.rs  timeline.rs
src/preview/dynamic/: extract_params.rs  param.rs  stateful.rs  stateless.rs
src/test/: automation.rs  config.rs  discovery.rs  error.rs  message.rs  outcome.rs  runner.rs  session.rs  size_input.rs  snapshot.rs  state.rs
src/test/automation/: builder.rs  emulator.rs  interaction.rs  query.rs  screenshot.rs  widget_tree.rs
src/widget/: badge.rs  config_pane.rs  dialog.rs  recorder.rs  split.rs
src/widget/config_pane/: about_pane.rs  message_pane.rs  parameter_pane.rs  performance_pane.rs  test_pane.rs
vscode-previews/: .vscodeignore  CHANGELOG.md  ICON.md  LICENSE  README.md  package-lock.json  package.json
vscode-previews/src/: extension.ts  previewCodeLensProvider.ts
