[package]
name = "snowscape"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { workspace = true, features = ["svg"] }
iced_anim.workspace = true

[workspace]
members = ["examples/counter", "examples/dynamic_params"]

[workspace.dependencies]
iced = "0.14.0-dev"
iced_anim = { git = "https://github.com/bradysimon/iced_anim", branch = "iced/master" }

[patch.crates-io]
iced.git = "https://github.com/iced-rs/iced.git"
iced.branch = "master"
