[package]
name = "snowscape"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { workspace = true, features = ["advanced", "svg", "fira-sans", "tokio"] }
iced_anim.workspace = true
iced_test.workspace = true
image = { workspace = true, default-features = false, features = ["png"] }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros"] }

[workspace]
members = ["examples/counter", "examples/custom_theme", "examples/dynamic_params", "examples/self"]

[features]
# Enables iced hot-reloading and exports some internal widgets for previewing.
internal = ["iced/hot"]

[workspace.dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
iced_test = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
iced_anim = { git = "https://github.com/bradysimon/iced_anim", branch = "iced/master" }
image = { version = "0.25", default-features = false }
tokio = { version = "1" }
