[package]
name = "demo"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "main"

[lib]
name = "demo"
path = "src/lib.rs"

[dependencies]
snowscape = { path = "../.." }
iced.workspace = true

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "preview"
path = "src/preview.rs"
